src/objects/c2g__InquiryTemplate__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpinquirytemplate</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__BaseDate__c</fullName>
        <label>Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__BasisDate__c</fullName>
        <label>Basis Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create date</fullName>
                    <default>true</default>
                    <label>Create date</label>
                </value>
                <value>
                    <fullName>Register date</fullName>
                </value>
                <value>
                    <fullName>Due date</fullName>
                </value>
                <value>
                    <fullName>Tax point date</fullName>
                </value>
                <value>
                    <fullName>Payment date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ColumnFilterDrill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column Filter Drill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dataview</label>
        <referenceTo>c2g__DataView__c</referenceTo>
        <relationshipLabel>Inquiry Templates</relationshipLabel>
        <relationshipName>InquiryTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeDocumentsOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Documents On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShowDocumentCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Document Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SignFilterCosmetic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore reverse signage on subtotal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SummarizationTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template</label>
        <referenceTo>c2g__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Summarization Templates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SummarizeDuplicateRows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summarize Duplicate Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TemplateType__c</fullName>
        <defaultValue>&quot;ACTIONVIEW&quot;</defaultValue>
        <label>Template Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Inquiry Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>